# Markup-Swift

./: PKGBUILD
.github/workflows/: aur.yml
contrib/: .SRCINFO
resources/: Markup-Swift.desktop
src/: animation.rs  app.rs  font.rs  main.rs  preview.rs  theme.rs  wrap.rs
src/Markup-Swift-0.1.0/: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
src/Markup-Swift-0.1.0/.github/workflows/: aur.yml
src/Markup-Swift-0.1.0/contrib/: PKGBUILD
src/Markup-Swift-0.1.0/resources/: markup-swift.desktop
src/Markup-Swift-0.1.0/src/: app.rs  context_menu.rs  editor.rs  file_ops.rs  preview.rs  tab_switcher.rs  titlebar.rs
