[package]
name = "markup-swift"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui = "0.34"
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
